--- a/front_page.html
+++ b/front_page.html
@@ -23,16 +23,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Crime Trends</a>
-                </li>
-                <li>
-                    <a href="#">Accused & Victim Statistics</a>
+                    <a href="/front_page.html">Home</a>
                 </li>
                 <li>
                     <a href="/accused_search.html">Accused Search</a>
                 </li>
                 <li>
-                    <a href="#">Crime Hotspot</a>
+                    <a href="/advanced_search.html">Advanced Search</a>
                 </li>
                <!--  
                 <li class="dropdown">
