--- a/accused_search.html
+++ b/accused_search.html
@@ -8,76 +8,177 @@
     <title>Accused Search</title>
 
     <link rel="stylesheet" href="./libs/bootstrap.min.css">
+    <link rel="stylesheet" href="./libs/sb-style.css">
     <link rel="stylesheet" href="./libs/style.css">
 </head>
 
 <body>
-    <h1 class="text-center">Accused search</h1>
-    <form class="form-inline text-center" id="search-form">
-        <div class="form-group">
-            <input type="text" class="form-control" name="nameParam" id="name-param" placeholder="Name" required>
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" name="parentParam" id="parent-param" placeholder="Parent Name" required>
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="number" name="lowerAge" id="lower-age" placeholder="Min Age" required>
-            <input class="form-control" type="number" name="upperAge" id="upper-age" placeholder="Max Age" required>
-        </div>
-        <input type="hidden" name="pageNo" value="1">
-        <input type="hidden" name="noOfRecordsPerPage" value="30">
-        <button type="submit" class="btn btn-default">Search</button>
-        <button type="button" class="btn btn-default" onclick="prevButtonPressed()">&lt;&lt; prev</button>
-        <button type="button" class="btn btn-default" onclick="nextButtonPressed()">next &gt;&gt;</button>
-    </form>
+    <div id="wrapper">
+        <div class="overlay"></div>
 
-    <hr>
+        <!-- Sidebar -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+            <ul class="nav sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        SCRB
+                    </a>
+                </li>
+                <li>
+                    <a href="/front_page.html">Home</a>
+                </li>
+                <li>
+                    <a href="/accused_search.html">Accused Search</a>
+                </li>
+                <li>
+                    <a href="/advanced_search.html">Advanced Search</a>
+                </li>
+                <!--  
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Works <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li class="dropdown-header">Dropdown heading</li>
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+                -->
+            </ul>
+        </nav>
+        <!-- /#sidebar-wrapper -->
 
-    <div class="container" id="results">
-        <div class="row">
-            <div class="col-md-4">
-                <h3>Case Sub Type</h3>
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+
+            <nav class="navbar navbar-default navbar-static-top">
+                <div class="container-fluid">
+                    <div>
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a data-toggle="offcanvas">
+                                    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">
+                            <!-- <img alt="Brand" src="..."> -->
+                            State Crime Records Beuro
+                        </a>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="container-fluid">
+                <h1 class="text-center">Accused search</h1>
+                <form class="form-inline text-center" id="search-form">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="nameParam" id="name-param" placeholder="Name"
+                            required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="parentParam" id="parent-param"
+                            placeholder="Parent Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="number" name="lowerAge" id="lower-age" placeholder="Min Age"
+                            required>
+                        <input class="form-control" type="number" name="upperAge" id="upper-age" placeholder="Max Age"
+                            required>
+                    </div>
+                    <input type="hidden" name="pageNo" value="1">
+                    <input type="hidden" name="noOfRecordsPerPage" value="30">
+                    <button type="submit" class="btn btn-default">Search</button>
+                    <button type="button" class="btn btn-default" onclick="prevButtonPressed()">&lt;&lt; prev</button>
+                    <button type="button" class="btn btn-default" onclick="nextButtonPressed()">next &gt;&gt;</button>
+                </form>
+
                 <hr>
-                <div id="case-sub-type" class="list-group"></div>
-            </div>
-            <div class="col-md-4">
-                <h3>Age Group</h3>
-                <hr>
-                <div id="age-group" class="list-group"></div>
-            </div>
-            <div class="col-md-4">
-                <h3>Address</h3>
-                <hr>
-                <div id="address" class="list-group"></div>
+
+                <div class="container" id="results">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h3>Case Sub Type</h3>
+                            <hr>
+                            <div id="case-sub-type" class="list-group"></div>
+                        </div>
+                        <div class="col-md-4">
+                            <h3>Age Group</h3>
+                            <hr>
+                            <div id="age-group" class="list-group"></div>
+                        </div>
+                        <div class="col-md-4">
+                            <h3>Address</h3>
+                            <hr>
+                            <div id="address" class="list-group"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal" id="accuseDetailsModal" role="dialog">
+
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title" id="adm-title"></h4>
+                            </div>
+                            <div class="modal-body" id="adm-body">
+                                <table id="adm-table"></table>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- /#page-content-wrapper -->
+
     </div>
-
-    <div class="modal" id="accuseDetailsModal" role="dialog">
-        
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title" id="adm-title"></h4>
-                </div>
-                <div class="modal-body" id="adm-body">
-                    <table id="adm-table"></table>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/bootstrap.min.js"></script>
 
     <script src="./scripts/config.js"></script>
     <script src="./scripts/utils.js"></script>
     <script src="./scripts/accused_search.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            var trigger = $('.hamburger'),
+                overlay = $('.overlay'),
+                isClosed = false;
+
+            trigger.click(function () {
+                hamburger_cross();
+            });
+
+            function hamburger_cross() {
+
+                if (isClosed == true) {
+                    overlay.hide();
+                    trigger.removeClass('is-open');
+                    trigger.addClass('is-closed');
+                    isClosed = false;
+                } else {
+                    overlay.show();
+                    trigger.removeClass('is-closed');
+                    trigger.addClass('is-open');
+                    isClosed = true;
+                }
+            }
+
+            $('[data-toggle="offcanvas"]').click(function () {
+                $('#wrapper').toggleClass('toggled');
+            });
+        });
+    </script>
 </body>
 
 </html>
