--- a/advanced_search.html
+++ b/advanced_search.html
@@ -23,16 +23,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Crime Trends</a>
-                </li>
-                <li>
-                    <a href="#">Accused & Victim Statistics</a>
+                    <a href="/front_page.html">Home</a>
                 </li>
                 <li>
                     <a href="/accused_search.html">Accused Search</a>
                 </li>
                 <li>
-                    <a href="#">Crime Hotspot</a>
+                    <a href="/advanced_search.html">Advanced Search</a>
                 </li>
                 <!--  
                 <li class="dropdown">
@@ -73,6 +70,7 @@
                     </div>
                 </div>
             </nav>
+            
             <div class="container-fluid">
 
                 <div class="row">
@@ -93,7 +91,7 @@
                                         </div>
                                         <div class="col-md-3">
                                             <button class="btn btn-outline-secondary"
-                                                onclick="getDistricts()">Search</button>
+                                                onclick="search()">Search</button>
                                             <!-- <button class="btn btn-outline-secondary" onclick="clear()">Clear</button> -->
                                         </div>
                                     </div>
@@ -104,12 +102,28 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-md-12">
+                <div class="row equal">
+                    <div class="col-md-6">
                         <div class="panel panel-default">
                             <div class="panel-heading bk-white">Districts Count</div>
                             <div class="panel-body">
                                 <ul class="rlabels" id="districts-count"></ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="panel panel-default">
+                            <div class="panel-heading bk-white">Age Group Count</div>
+                            <div class="panel-body">
+                                <ul class="rlabels" id="age-group-count"></ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="panel panel-default">
+                            <div class="panel-heading bk-white">Case Type</div>
+                            <div class="panel-body">
+                                <ul class="rlabels" id="case-type"></ul>
                             </div>
                         </div>
                     </div>
@@ -121,6 +135,17 @@
                             <div class="panel-heading bk-white">Taluks Count</div>
                             <div class="panel-body">
                                 <ul class="rlabels" id="taluks-count"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading bk-white">Full Result</div>
+                            <div class="panel-body">
+                                <div id="full-result"></div>
                             </div>
                         </div>
                     </div>
