--- a/wab.html
+++ b/wab.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Dashboard</title>
+    <title>TA</title>
     <link rel="stylesheet" href="./libs/bootstrap.min.css">
     <link rel="stylesheet" href="./libs/sb-style.css">
     <link rel="stylesheet" href="./libs/style.css">
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="panel panel-info">
-                    <div class="panel-heading">Panel heading without title</div>
+                    <div class="panel-heading">Map view</div>
                     <div class="panel-body">
                         <div id="mapid"></div>
                     </div>
