--- a/wab.html
+++ b/wab.html
@@ -13,11 +13,12 @@
         #mapid {
             height: 480px;
         }
-        .hash-tag{
+
+        .hash-tag {
             color: #1DA1F2;
         }
 
-        .hash-tag:hover{
+        .hash-tag:hover {
             color: #0f92e3;
             cursor: pointer;
         }
@@ -111,13 +112,14 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="panel panel-default">
+                    <div class="panel-heading">Daily Trends</div>
                     <div class="panel-body">
                         <canvas id="bar-chart" width="800" height="450"></canvas>
                     </div>
                 </div>
 
                 <div class="panel panel-info">
-                    <div class="panel-heading">Map view</div>
+                    <div class="panel-heading">Tweet Location: India</div>
                     <div class="panel-body">
                         <div id="mapid"></div>
                     </div>
@@ -126,7 +128,7 @@
             <div class="col-md-5">
                 <ul class="list-group">
                     <li class="list-group-item list-group-item-info">
-                        Hashtags
+                        Hashtag Associated with #womenabuse
                     </li>
                     <li class="list-group-item">
                         <span class="badge badge-info">1420</span>
@@ -135,10 +137,6 @@
                     <li class="list-group-item">
                         <span class="badge badge-info">284</span>
                         <span class="hash-tag">#crime</span>
-                    </li>
-                    <li class="list-group-item list-group-item-warning">
-                        <span class="badge badge-info">314</span>
-                        <span class="hash-tag">#womenabuse</span>
                     </li>
                     <li class="list-group-item">
                         <span class="badge badge-info">184</span>
@@ -153,26 +151,32 @@
                         <span class="hash-tag">#police</span>
                     </li>
                 </ul>
-                <ul class="list-group">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <canvas id="pie-chart"></canvas>
+                    </div>
+                </div>
+                <!-- <ul class="list-group">
                     <li class="list-group-item">
                         Verified User: 78
                     </li>
                     <li class="list-group-item">
                         Uniq users: 850
                     </li>
-                </ul>
-               
+                </ul> -->
                 <ul class="list-group">
                     <li class="list-group-item list-group-item-danger">
                         Most Liked Tweets
                     </li>
                     <li class="list-group-item">
                         <h5 class="list-group-item-heading">@shamshudeen</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                     </li>
                     <li class="list-group-item">
                         <h5 class="list-group-item-heading">@solaimurugan</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                     </li>
                 </ul>
                 <ul class="list-group">
@@ -181,11 +185,13 @@
                     </li>
                     <li class="list-group-item">
                         <h5 class="list-group-item-heading">@arunkumarv</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                     </li>
                     <li class="list-group-item">
                         <h5 class="list-group-item-heading">@stephen</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                     </li>
                 </ul>
             </div>
@@ -216,7 +222,7 @@
                     {
                         label: "Count",
                         backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850"],
-                        data: [10, 14, 2, 16]
+                        data: [510,414, 632, 316]
                     }
                 ]
             },
@@ -237,13 +243,55 @@
         });
     </script>
 
+    <script>
+        new Chart(document.getElementById("pie-chart"), {
+            type: 'doughnut',
+            data: {
+                datasets: [{
+                    backgroundColor: ["#3e95cd", "#8e5ea2"],
+                    data: [
+                        78,
+                        850
+                    ]
+                }],
+
+                // These labels appear in the legend and in the tooltips when hovering different arcs
+                labels: [
+                    'Verified Users',
+                    'Uniq Users',
+                ]
+            },
+            options: {}
+        })
+    </script>
+
     <!-- Map -->
     <script>
-        var mymap = L.map('mapid').setView([23.805825, 79.918830], 4);
+        var map = L.map('mapid').setView([23.805825, 79.918830], 4);
+        let markerIconUrl = "libs/red-dot.png";
+
+        var MarkerIcon = L.Icon.extend({
+            options: {
+                iconSize: [10, 10],
+                //shadowSize: [50, 64],
+                //iconAnchor: [22, 94],
+                //shadowAnchor: [4, 62],
+                //popupAnchor: [-3, -76]
+            }
+        });
+
+        var markerIcon = new MarkerIcon({ iconUrl: markerIconUrl });
 
         L.tileLayer.wms('https://bhuvan-vec1.nrsc.gov.in/bhuvan/gwc/service/wms?', {
             layers: 'indiainf', maxZoom: 18
-        }).addTo(mymap);
+        }).addTo(map);
+        L.marker([13.066032041715918, 80.253286600852160], { icon: markerIcon }).addTo(map).bindPopup("Chennai, Tamil Nadu, <br>13.066032041715918, 80.253286600852160");
+
+        L.marker([18.950038597674375, 72.850997751786240], { icon: markerIcon }).addTo(map).bindPopup("Mumbai, Maharashtra,<br>18.950038597674375, 72.850997751786240");
+
+        L.marker([27.074989480779475, 78.138365336515260], { icon: markerIcon }).addTo(map).bindPopup("Agra, Uttar Pradesh,<br>27.074989480779475, 78.138365336515260");
+
+        L.marker([21.151652261799070, 78.956094845942860], { icon: markerIcon }).addTo(map).bindPopup("Nagpur, Maharashtra,<br>21.151652261799070, 78.956094845942860");
 
 
     </script>
