--- a/wab.html
+++ b/wab.html
@@ -135,6 +135,10 @@
                         <span class="hash-tag">#child</span>
                     </li>
                     <li class="list-group-item">
+                        <span class="badge badge-info">2340</span>
+                        <span class="hash-tag">#online</span>
+                    </li>
+                    <li class="list-group-item">
                         <span class="badge badge-info">284</span>
                         <span class="hash-tag">#crime</span>
                     </li>
@@ -147,8 +151,8 @@
                         <span class="hash-tag">#tamilnadu</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="badge badge-info">124</span>
-                        <span class="hash-tag">#police</span>
+                        <span class="badge badge-info">24</span>
+                        <span class="hash-tag">#politician</span>
                     </li>
                 </ul>
                 <div class="panel panel-default">
@@ -169,14 +173,19 @@
                         Most Liked Tweets
                     </li>
                     <li class="list-group-item">
-                        <h5 class="list-group-item-heading">@shamshudeen</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <!-- <h5 class="list-group-item-heading">@shamshudeen</h5> -->
+                        <p class="list-group-item-text">shame on <span style="font-weight:bold;">@kotakmahindrabank</span> for supporting criminals. Why are you hiring goondas and sending them to trouble women? They fear for their safety </p>
                     </li>
                     <li class="list-group-item">
-                        <h5 class="list-group-item-heading">@solaimurugan</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <!-- <h5 class="list-group-item-heading">@solaimurugan</h5> -->
+                        <p class="list-group-item-text">
+                            society circumstances genetics surroundings influences hatred 
+                            ego attitude silence ignorance 
+                            culture illiteracy unawareness all credits into his 
+                            lifestyle but finally actions speak more 
+                            than jus words.nw <span class="hash-tag">#trust</span> is lost in this <span class="hash-tag">#humanity</span> 
+                            urge everyone be cautious n report <span class="hash-tag">#abuse</span>
+                        </p>
                     </li>
                 </ul>
                 <ul class="list-group">
@@ -184,14 +193,17 @@
                         Most Retweeted Tweets
                     </li>
                     <li class="list-group-item">
-                        <h5 class="list-group-item-heading">@arunkumarv</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <!-- <h5 class="list-group-item-heading">@arunkumarv</h5> -->
+                        <p class="list-group-item-text">Very Worthy read. TimesLife! 
+                            <span style="font-weight:bold;">@timesofindia</span>
+                            <span class="hash-tag">#painkiller #abuse #wakeup #parents #heartattacks</span>
+                        </p>
                     </li>
                     <li class="list-group-item">
-                        <h5 class="list-group-item-heading">@stephen</h5>
-                        <p class="list-group-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <!-- <h5 class="list-group-item-heading">@stephen</h5> -->
+                        <p class="list-group-item-text">
+                            <span class="hash-tag">#Indian #women #politicians #face #Abuse </span>
+                            : Amnesty International India Study  Also #Global #Online #Violence #Rises</p>
                     </li>
                 </ul>
             </div>
