--- a/wab.html
+++ b/wab.html
@@ -297,13 +297,13 @@
         L.tileLayer.wms('https://bhuvan-vec1.nrsc.gov.in/bhuvan/gwc/service/wms?', {
             layers: 'indiainf', maxZoom: 18
         }).addTo(map);
-        L.marker([13.066032041715918, 80.253286600852160], { icon: markerIcon }).addTo(map).bindPopup("Chennai, Tamil Nadu, <br>13.066032041715918, 80.253286600852160");
+        L.marker([13.066032041715918, 80.253286600852160], { icon: markerIcon }).addTo(map).bindPopup("Chennai, Tamil Nadu, <br><span style=\"font-weight:bold\">@senthil</span><br>Student");
 
-        L.marker([18.950038597674375, 72.850997751786240], { icon: markerIcon }).addTo(map).bindPopup("Mumbai, Maharashtra,<br>18.950038597674375, 72.850997751786240");
+        L.marker([18.950038597674375, 72.850997751786240], { icon: markerIcon }).addTo(map).bindPopup("Mumbai, Maharashtra,<br><span style=\"font-weight:bold\">@anjum</span><br>Journalist");
 
-        L.marker([27.074989480779475, 78.138365336515260], { icon: markerIcon }).addTo(map).bindPopup("Agra, Uttar Pradesh,<br>27.074989480779475, 78.138365336515260");
+        L.marker([27.074989480779475, 78.138365336515260], { icon: markerIcon }).addTo(map).bindPopup("Agra, Uttar Pradesh,<br><span style=\"font-weight:bold\">@dhan</span><br>Writer");
 
-        L.marker([21.151652261799070, 78.956094845942860], { icon: markerIcon }).addTo(map).bindPopup("Nagpur, Maharashtra,<br>21.151652261799070, 78.956094845942860");
+        L.marker([21.151652261799070, 78.956094845942860], { icon: markerIcon }).addTo(map).bindPopup("Nagpur, Maharashtra,<br><span style=\"font-weight:bold\">@arunkumarv</span><br>Educator");
 
 
     </script>
